<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_25"
        android:title="@string/_0_25x"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_5"
        android:title="@string/_0_5x"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_75"
        android:title="@string/_0_75x"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionNormal"
        android:title="@string/normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action1_25"
        android:title="@string/_1_25x"
        app:showAsAction="never" />
    <item
        android:id="@+id/action1_5"
        android:title="@string/_1_5x"
        app:showAsAction="never" />
    <item
        android:id="@+id/action2"
        android:title="@string/_2x"
        app:showAsAction="never" />

</menu>
