<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide_start_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide_end_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_chevron_left"
        app:navigationIconTint="@color/white"
        app:title="@string/permissions"
        app:titleTextColor="@color/white"
        tools:layout_height="48dp" />

    <ImageView
        android:id="@+id/img_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_permissions_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/permissions_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/vertical_guide_end_16"
        app:layout_constraintStart_toStartOf="@id/vertical_guide_start_16"
        app:layout_constraintTop_toBottomOf="@id/img_guard" />

    <ImageView
        android:id="@+id/img_photos"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/photos_and_videos"
        app:layout_constraintStart_toStartOf="@id/vertical_guide_start_16"
        app:layout_constraintTop_toBottomOf="@id/tv_permissions_title"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_photos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:text="@string/permissions_title_photos"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_photos_desc"
        app:layout_constraintStart_toEndOf="@id/img_photos"
        app:layout_constraintTop_toTopOf="@+id/img_photos" />

    <TextView
        android:id="@+id/tv_photos_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permissions_desc_photos"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_photos"
        app:layout_constraintEnd_toEndOf="@id/vertical_guide_end_16"
        app:layout_constraintStart_toStartOf="@id/tv_photos"
        app:layout_constraintTop_toBottomOf="@+id/tv_photos" />

    <ImageView
        android:id="@+id/img_camera"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_camera_white"
        app:layout_constraintStart_toStartOf="@id/vertical_guide_start_16"
        app:layout_constraintTop_toBottomOf="@id/img_photos"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_camera_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:text="@string/permissions_title_camera"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_camera_desc"
        app:layout_constraintEnd_toEndOf="@id/vertical_guide_end_16"
        app:layout_constraintStart_toEndOf="@id/img_camera"
        app:layout_constraintTop_toTopOf="@id/img_camera" />

    <TextView
        android:id="@+id/tv_camera_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permissions_desc_camera"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@id/img_camera"
        app:layout_constraintEnd_toEndOf="@id/vertical_guide_end_16"
        app:layout_constraintStart_toStartOf="@id/tv_camera_title"
        app:layout_constraintTop_toBottomOf="@id/tv_camera_title" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_location_white"
        app:layout_constraintStart_toStartOf="@id/vertical_guide_start_16"
        app:layout_constraintTop_toBottomOf="@id/img_camera"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_location_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:text="@string/permissions_title_location"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_location_desc"
        app:layout_constraintStart_toEndOf="@id/img_location"
        app:layout_constraintTop_toTopOf="@id/img_location" />

    <TextView
        android:id="@+id/tv_location_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permissions_desc_location"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@id/img_location"
        app:layout_constraintEnd_toEndOf="@id/vertical_guide_end_16"
        app:layout_constraintStart_toStartOf="@id/tv_location_title"
        app:layout_constraintTop_toBottomOf="@id/tv_location_title" />

    <ImageView
        android:id="@+id/img_settings"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="@id/vertical_guide_start_16"
        app:layout_constraintTop_toBottomOf="@id/img_location"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_settings_desc"
        app:layout_constraintStart_toEndOf="@id/img_settings"
        app:layout_constraintTop_toTopOf="@id/img_settings" />

    <TextView
        android:id="@+id/tv_settings_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permissions_settings_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@id/img_settings"
        app:layout_constraintEnd_toEndOf="@id/vertical_guide_end_16"
        app:layout_constraintStart_toStartOf="@id/tv_settings_title"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_continue"
        style="@style/SLButton.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary_blue_700"
        android:text="@string/continue_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/primary_blue_700"
        tools:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>