<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_header"
        android:layout_width="100dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/neutral_gray_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:background="?selectableItemBackground"
        android:paddingEnd="12dp"
        android:text="@string/back"
        android:textAppearance="@style/Text.Bold.16.PrimaryColor"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_arrow_left_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_header" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pick_and_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_an_avatar"
        android:textAppearance="@style/Text.Bold.16.PrimaryColor"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_back"
        app:layout_constraintTop_toTopOf="@id/tv_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        android:textAppearance="@style/Text.Bold.16.PrimaryColor"
        android:textColor="@color/neutral_gray_900"
        app:layout_constraintBottom_toBottomOf="@id/tv_pick_and_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_pick_and_avatar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_avatars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pick_and_avatar" />

</androidx.constraintlayout.widget.ConstraintLayout>